logs/dag_id=etl_MusicStreamPipeline/run_id=manual__2025-02-09T134216.399586+0000/task_id=MusicStream_load_song/attempt=1.log
[2025-02-09T13:42:22.353+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-02-09T13:42:22.373+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_MusicStreamPipeline.MusicStream_load_song manual__2025-02-09T13:42:16.399586+00:00 [queued]>
[2025-02-09T13:42:22.470+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_MusicStreamPipeline.MusicStream_load_song manual__2025-02-09T13:42:16.399586+00:00 [queued]>
[2025-02-09T13:42:22.470+0000] {taskinstance.py:2303} INFO - Starting attempt 1 of 1
[2025-02-09T13:42:22.482+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): MusicStream_load_song> on 2025-02-09 13:42:16.399586+00:00
[2025-02-09T13:42:22.488+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=2607) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2025-02-09T13:42:22.488+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'etl_MusicStreamPipeline', 'MusicStream_load_song', 'manual__2025-02-09T13:42:16.399586+00:00', '--job-id', '609', '--raw', '--subdir', 'DAGS_FOLDER/etl_dag.py', '--cfg-path', '/tmp/tmpt11b3hux']
[2025-02-09T13:42:22.489+0000] {standard_task_runner.py:63} INFO - Started process 2609 to run task
[2025-02-09T13:42:22.490+0000] {standard_task_runner.py:91} INFO - Job 609: Subtask MusicStream_load_song
[2025-02-09T13:42:22.520+0000] {task_command.py:426} INFO - Running <TaskInstance: etl_MusicStreamPipeline.MusicStream_load_song manual__2025-02-09T13:42:16.399586+00:00 [running]> on host e231ebee4370
[2025-02-09T13:42:22.578+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Le Huynh Thanh Duong' AIRFLOW_CTX_DAG_ID='etl_MusicStreamPipeline' AIRFLOW_CTX_TASK_ID='MusicStream_load_song' AIRFLOW_CTX_EXECUTION_DATE='2025-02-09T13:42:16.399586+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-02-09T13:42:16.399586+00:00'
[2025-02-09T13:42:22.579+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-02-09T13:42:22.627+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-02-09T13:42:22.628+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/etls/load.py", line 70, in load_dim_songs
    cur.execute(artists_key_select, (row.artist_id,))
psycopg2.errors.SyntaxError: syntax error at or near "rowiscurrent"
LINE 1: ...im_artists WHERE artist_id = 'ARD7TVE1187B99BFB1' rowiscurre...
                                                             ^

[2025-02-09T13:42:22.636+0000] {taskinstance.py:1205} INFO - Marking task as FAILED. dag_id=etl_MusicStreamPipeline, task_id=MusicStream_load_song, execution_date=20250209T134216, start_date=20250209T134222, end_date=20250209T134222
[2025-02-09T13:42:22.644+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 609 for task MusicStream_load_song (syntax error at or near "rowiscurrent"
LINE 1: ...im_artists WHERE artist_id = 'ARD7TVE1187B99BFB1' rowiscurre...
                                                             ^
; 2609)
[2025-02-09T13:42:22.663+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-02-09T13:42:22.677+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-02-09T13:42:22.683+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
